--- a/app/src/main/res/navigation/admin_navigation_graph.xml
+++ b/app/src/main/res/navigation/admin_navigation_graph.xml
@@ -9,5 +9,23 @@
         android:id="@+id/adminFragment"
         android:name="com.sqli.guildes.ui.admin.AdminFragment"
         android:label="fragment_admin"
-        tools:layout="@layout/fragment_admin" />
+        tools:layout="@layout/fragment_admin">
+        <action
+            android:id="@+id/action_adminFragment_to_validationFragment"
+            app:destination="@id/validationFragment"
+            app:enterAnim="@animator/slide_in_right"
+            app:exitAnim="@animator/slide_out_left"
+            app:popEnterAnim="@animator/slide_in_left"
+            app:popExitAnim="@animator/slide_out_right"/>
+    </fragment>
+    <fragment
+        android:id="@+id/validationFragment"
+        android:name="com.sqli.guildes.ui.validation.ValidationFragment"
+        android:label="fragment_validation"
+        tools:layout="@layout/fragment_validation" >
+        <argument
+            android:name="contribId"
+            android:defaultValue=" "
+            app:argType="string" />
+    </fragment>
 </navigation>
