--- a/app/src/main/res/layout/fragment_validation.xml
+++ b/app/src/main/res/layout/fragment_validation.xml
@@ -46,9 +46,9 @@
         android:paddingRight="0dp"
         android:paddingBottom="@dimen/mini"
         android:src="@drawable/verseau"
-        app:layout_constraintHorizontal_bias="1"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toStartOf="@+id/tvGuildeInfoName"
+        app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -58,11 +58,13 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/small"
         android:layout_marginRight="@dimen/small"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
         android:paddingEnd="@dimen/small"
         android:paddingRight="@dimen/small"
-        app:layout_constrainedWidth="true"
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/textH3"
+        app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="@+id/ivGuildeInfo"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintTop_toTopOf="@+id/ivGuildeInfo"
@@ -72,6 +74,7 @@
         android:id="@+id/tvProfileGuildeName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/small"
         android:layout_marginLeft="@dimen/small"
         android:contentDescription="@string/app_name"
         android:text="@string/contributions_points"
@@ -104,6 +107,8 @@
         android:paddingStart="@dimen/mini"
         android:paddingLeft="@dimen/mini"
         android:paddingTop="@dimen/mini"
+        android:paddingEnd="0dp"
+        android:paddingRight="0dp"
         android:paddingBottom="@dimen/mini"
         android:textColor="@color/colorH2"
         android:textSize="@dimen/textH2"
