Add confirmation dialog

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#533473</color>
     <color name="colorSecondary">#FFFFFF</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#E0E0E0</color>
+    <color name="colorAccent">#54beea</color>
     <color name="colorBg">#424242</color>
     <color name="colorWhite">#fff</color>
     <color name="colorSurface">#F4F4F4</color>
